...
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/help_reader_actions_first_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/menu_reader"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/help_reader_actions_search_label"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/help_reader_actions_search_label"
        app:srcCompat="@drawable/action_search" />
...
        android:contentDescription="@string/menu_index"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/help_reader_actions_previous_label"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/help_reader_actions_previous_label"
        app:srcCompat="@drawable/action_previous" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/menu_sync"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/help_reader_actions_next_label"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/help_reader_actions_next_label"
        app:srcCompat="@drawable/action_next" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/menu_accessibility"
        android:tint="@color/white"
...
