...
        android:background="@color/rule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.kidscademy.atlas.view.HexaIcon
        android:id="@+id/reader_links_caption"
        android:layout_width="@dimen/hexa_icon_size"
        android:layout_height="@dimen/hexa_icon_size"
        app:borderColor="@color/white_T80"
        app:borderSize="1"
        app:layout_constraintBottom_toBottomOf="@id/reader_links_hr"
        app:layout_constraintEnd_toEndOf="@id/reader_links_vr"
...
