...
    <string name="help_sync_p6">In current version external browser should be in the same network as mobile device. It is not possible to synchronize with a browser from a different location.</string>

    <!-- error activity -->
    <string name="error_message">There are some problems running this app. Please try to stop the app and launch it again.\n\nEnsure app is updated. As final resort, you can reinstall it.\n\nIf still not working please fill a bad comment on store.</string>
    <string name="error_restart">App Restart</string>

    <string name="action_forward">Move forward</string>

    <!-- main menu activity -->
    <string name="menu_reader">Atlas Reader</string>
    <string name="menu_search">Atlas Search</string>
    <string name="menu_index">Atlas Index</string>
    <string name="menu_sync">Browser Sync</string>
    <string name="menu_accessibility">Accessibility Mode</string>
    <string name="menu_user_guide">User Guide</string>
    <string name="menu_about">About Atlas</string>
    <string name="menu_share">Share Atlas</string>
    <string name="menu_rate">Rate Atlas</string>
    <string name="menu_close">Close Atlas</string>

    <!-- sync activity -->
    <string name="sync_start_button" translatable="false">Sync</string>
    <string name="sync_stop_button">Stop</string>
    <string name="sync_info">For more information about browser synchronization please see user guide.</string>
    <string name="sync_start_short_message_1">View together on a big screen browser.</string>
...
